versions/v3.6.0/doxygen/html/structbt__vocs__cb.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/structbt__vocs__cb.html
original_path: doxygen/html/structbt__vocs__cb.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

bt\_vocs\_cb Struct Reference

[Connectivity](group__connectivity.md) » [Bluetooth APIs](group__bluetooth.md) » [Volume Offset Control Service (VOCS)](group__bt__gatt__vocs.md)

`#include <[vocs.h](vocs_8h_source.md)>`

| Data Fields | |
| --- | --- |
| [bt\_vocs\_state\_cb](group__bt__gatt__vocs.md#gaa329fd8931add8fd4f6c59b48c91ef75) | [state](#ae633c1f6cd8aa03d89287e783179460e) |
| [bt\_vocs\_location\_cb](group__bt__gatt__vocs.md#ga84983707e04eae75f18017072b647115) | [location](#a50d1d429089456267b06d4450712b897) |
| [bt\_vocs\_description\_cb](group__bt__gatt__vocs.md#gaa351c3ab631b16272e27cbb837d9e49c) | [description](#ac508b1e6dda00c607aa1cbe52423ec52) |

## Field Documentation

## [◆ ](#ac508b1e6dda00c607aa1cbe52423ec52)description

| [bt\_vocs\_description\_cb](group__bt__gatt__vocs.md#gaa351c3ab631b16272e27cbb837d9e49c) bt\_vocs\_cb::description |
| --- |

## [◆ ](#a50d1d429089456267b06d4450712b897)location

| [bt\_vocs\_location\_cb](group__bt__gatt__vocs.md#ga84983707e04eae75f18017072b647115) bt\_vocs\_cb::location |
| --- |

## [◆ ](#ae633c1f6cd8aa03d89287e783179460e)state

| [bt\_vocs\_state\_cb](group__bt__gatt__vocs.md#gaa329fd8931add8fd4f6c59b48c91ef75) bt\_vocs\_cb::state |
| --- |

---

The documentation for this struct was generated from the following file:

- zephyr/bluetooth/audio/[vocs.h](vocs_8h_source.md)

- [bt\_vocs\_cb](structbt__vocs__cb.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
